--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,11 +21,13 @@
 				</div>
 
 				<ul class="main-nav">
-					<li><a href="">PÁGINA PRINCIPAL</a></li>
-					<li><a href="">LEI MARIA DA PENHA</a></li>
-					<li><a href="">PUBLICAÇÕES</a></li>
+					<li><a href="">A LEI MARIA DA PENHA</a></li>
+					<li><a href="">REDE DE ATENDIMENTO</a></li>
 					<li><a href="">VAGAS DE EMPREGO</a></li>
-					<li><a href="">CONTATO</a></li>
+					<li><a href="">PUBLICAÇÕES</a></li>
+					<li><a href="">TIRE DÚVIDAS</a></li>
+					<li>|</li>
+					<li><a href="">PLANO MUNICIPAL</a></li>
 				</ul>
 			</div>
 
