--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,44 +1,233 @@
 <!DOCTYPE html>
-<!-- https://www.youtube.com/watch?v=wVvhqJBcmcg -->
+<html class="wide wow-animation scrollTo smoothscroll" lang="en">
 
-<html>
-	<head>
-	    <meta charset="utf-8">
-	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	    <meta name="viewport" content="width=device-width, initial-scale=1">
-	    <meta name="description" content="">
-	    <meta name="Igor Felipe Boniatti" content="">
-	    <title>Projeto Maria da Penha</title>
+<head>
+  <title>Projeto Maria da Penha</title>
+  <meta charset="utf-8">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <%= stylesheet_link_tag 'style', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'styleoriginal', media: 'all', 'data-turbolinks-track' => true %>
+  <!--[if lt IE 10]><div style="background: #212121; padding: 10px 0; box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3); clear: both; text-align:center; position: relative; z-index:1;"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div><script src="js/html5shiv.min.js"></script><![endif]
 
-	    <%= stylesheet_link_tag 'style', media: 'all', 'data-turbolinks-track' => true %>
-	    <%= csrf_meta_tags %>
-	</head>
-	<body>
-		<header>
-			<div class="row">
-				<div class="logo">
-					<%= link_to(image_tag ("logo_fundo_preto.png")) %>
-				</div>
+	<img style="margin-top: -5px;margin-left: -15px;" width="138" height="31" src="images/intense/logo-light.png" alt="">
 
-				<ul class="main-nav">
-					<li><a href="">A LEI MARIA DA PENHA</a></li>
-					<li><a href="">REDE DE ATENDIMENTO</a></li>
-					<li><a href="">VAGAS DE EMPREGO</a></li>
-					<li><a href="">PUBLICAÇÕES</a></li>
-					<li><a href="">TIRE DÚVIDAS</a></li>
-					<li>|</li>
-					<li><a href="">PLANO MUNICIPAL</a></li>
-				</ul>
-			</div>
+	<img class="img-fluid" style="margin-top: -20px;margin-left: -18px;" width="330" height="67" src="images/intense/logo-big.png" alt="">
 
-			<div class="hero">
-				<h1>PROJETO</h1>
-				<h1>MARIA DA PENHA</h1>
-				<h1>CHAPECÓ</h1>
-			</div>
-
-		</header>
+	<span class="rd-navbar-label text-middle label-custom label-danger label-xs-custom label-rounded-custom label">new</span>
 
 
-	</body>
+	.ui-to-top {
+  box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.15);
+  position: fixed;
+  right: 15px;
+  bottom: 15px;
+  overflow: hidden;
+  z-index: 1;
+  transform: translateY(100px);
+}
+
+.ui-to-top:focus {
+  color: #ffffff;
+}
+
+.ui-to-top:hover {
+  color: #ffffff;
+  background: #42b574;
+}
+
+.ui-to-top.active {
+  transform: translateY(0);
+}
+
+.mobile .ui-to-top,
+.tablet .ui-to-top {
+  display: none !important;
+}
+
+@media (min-width: 480px) {
+  .ui-to-top {
+    right: 40px;
+    bottom: 40px;
+  }
+}
+
+
+
+
+
+  -->
+</head>
+
+<body>
+  <div class="page text-center">
+    <header class="section page-head slider-menu-position">
+      <div class="rd-navbar-wrap">
+        <nav class="rd-navbar rd-navbar-default rd-navbar-transparent" data-md-device-layout="rd-navbar-fixed" data-lg-device-layout="rd-navbar-static" data-lg-auto-height="true" data-md-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-static" data-lg-stick-up="true">
+          <div class="rd-navbar-inner">
+            <div class="rd-navbar-panel">
+              <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar, .rd-navbar-nav-wrap">
+                <span></span>
+              </button>
+              <div class="rd-navbar-brand">
+                <a href="">
+                  <div class="img-logo-fluid">
+			      	<%= link_to(image_tag ("logo_fundo_preto.png")) %>
+			      </div>
+                </a>
+              </div>
+            </div>
+            <div class="rd-navbar-menu-wrap">
+              <div class="rd-navbar-nav-wrap">
+                <div class="rd-navbar-mobile-scroll">
+                  <div class="rd-navbar-mobile-brand">
+                    <a href="">
+                      <div class="logo">
+				      	<%= link_to(image_tag ("logo_fundo_preto.png")) %>
+				      </div>
+                    </a>
+                  </div>
+                  <div class="form-search-wrap">
+                    <form class="form-search rd-search" action="" method="GET">
+                      <div class="form-group">
+                        <label class="form-label form-search-label form-label-sm" for="rd-navbar-form-search-widget">Pesquisar</label>
+                        <input class="form-search-input input-sm form-control form-control-gray-lightest input-sm" id="rd-navbar-form-search-widget" type="text" name="s" autocomplete="off">
+                      </div>
+                      <button class="form-search-submit" type="submit">
+                        <span class="novi-icon mdi mdi-magnify"></span>
+                      </button>
+                    </form>
+                  </div>
+                  <ul class="rd-navbar-nav">
+                    <li class="active">
+                      <a href="">
+                        <span>A Lei Maria da Penha</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <span>Rede de Atendimento</span>                        
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <span>Vagas de Emprego</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="portfolio-grid-3-columns.html">
+                        <span>Publicações</span>
+                      </a>
+                      <ul class="rd-navbar-dropdown">
+                        <li>
+                          <a href="#">
+                            <span class="text-middle">Grid Layout</span>
+                          </a>
+                          <ul class="rd-navbar-dropdown">
+                            <li>
+                              <a href="portfolio-grid-3-columns.html">
+                                <span class="text-middle">Horizontal</span>
+                              </a>
+                            </li>
+                            <li>
+                              <a href="portfolio-grid-3-columns-vertical.html">
+                                <span class="text-middle">Vertical</span>
+                              </a>
+                            </li>
+                          </ul>
+                        </li>
+                      </ul>
+                    </li>
+                    <li>
+                      <a href="blog-default-left-sidebar.html">
+                        <span>Tire Dúvidas</span>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="rd-navbar-search">
+                <a class="rd-navbar-search-toggle mdi" data-rd-navbar-toggle=".rd-navbar-inner,.rd-navbar-search" href="#">
+                  <span></span>
+                </a>
+                <form class="rd-navbar-search-form search-form-icon-right rd-search" action="" method="GET">
+                  <div class="form-group">
+                    <label class="form-label" for="rd-navbar-search-form-control">Digite para pesquisar...</label>
+                    <input class="rd-navbar-search-form-control form-control form-control-gray-lightest" id="rd-navbar-search-form-control" type="text" name="s" autocomplete="off">
+                  </div>
+                </form>
+              </div>
+              <div class="rd-navbar-btn-wrap">
+                <a class="btn btn-primary btn-anis-effect" href="https://www.chapeco.sc.gov.br/">
+                  <span class="btn-text">Plano Municipal</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </nav>
+      </div>
+      <div class="swiper-container swiper-slider" data-loop="true" data-autoplay="true" data-height="100vh" data-dragable="false" data-min-height="480px">
+        <div class="swiper-wrapper text-center">
+          <div class="swiper-slide" id="" data-slide-bg="" data-preview-bg="">
+            <div class="swiper-caption swiper-parallax">
+              <div class="swiper-slide-caption">
+                <div class="container">
+                  <div class="row justify-content-xl-center">
+                    <div class="col-xl-12">
+                      <h1>
+                        <span class="big text-uppercase" data-caption-animate="fadeIn" data-caption-delay="700">Projeto Maria da Penha Chapecó</span>
+                      </h1>
+                    </div>
+                    <div class="col-xl-10 offset-top-30">
+                      <h4 class="d-none d-md-block text-light" data-caption-animate="fadeIn" data-caption-delay="900"> The smartest and most flexible bootstrap template by TemplateMonster you've ever seen. Create exactly what you need with our powerful bootstrap toolkit. </h4>
+                      <div class="group group-xl offset-top-20 offset-sm-top-50">
+                        <a class="btn btn-primary btn-lg btn-anis-effect" href="" data-caption-animate="fadeIn" data-caption-delay="1200">
+                          <span class="btn-text">Try builder now</span>
+                        </a>
+                        <a class="btn btn-default btn-lg btn-anis-effect" href="" data-caption-animate="fadeIn" data-caption-delay="1200">
+                          <span class="btn-text">Buy intense now</span>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-button swiper-button-prev swiper-parallax">
+          <div class="preview">
+            <div class=""></div>
+          </div>
+        </div>
+        <div class="swiper-button swiper-button-next swiper-parallax">
+          <div class="preview">
+            <div class=""></div>
+          </div>
+        </div>
+        <div class="swiper-pagination"></div>
+      </div>
+    </header>
+    <footer class="section novi-background section-34 page-footer bg-black context-dark">
+      <div class="container">
+        <div class="footer-brand">
+          <a href="img-logo-fluid">
+            PROJETO MARIA DA PENHA CHAPECÓ
+          </a>
+        </div>
+        <p class="small text-darker">©
+          <span class="copyright-year"></span> .
+          <a href="privacy.html">Privacy Policy</a>
+        </p>
+      </div>
+    </footer>
+  </div>
+  <div class="snackbars" id="form-output-global"></div>
+
+  <%= javascript_include_tag 'core.min', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'script', media: 'all', 'data-turbolinks-track' => true %>
+
+</body>
+
 </html>
