--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <%= stylesheet_link_tag 'style', media: 'all', 'data-turbolinks-track' => true %>
-  <%= stylesheet_link_tag 'styleoriginal', media: 'all', 'data-turbolinks-track' => true %>
+
   <!--[if lt IE 10]><div style="background: #212121; padding: 10px 0; box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3); clear: both; text-align:center; position: relative; z-index:1;"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div><script src="js/html5shiv.min.js"></script><![endif]
 
 	<img style="margin-top: -5px;margin-left: -15px;" width="138" height="31" src="images/intense/logo-light.png" alt="">
@@ -100,8 +100,13 @@
                     </form>
                   </div>
                   <ul class="rd-navbar-nav">
-                    <li class="active">
+                  	<li class="active">
                       <a href="">
+                        <span>Página Inicial</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
                         <span>A Lei Maria da Penha</span>
                       </a>
                     </li>
@@ -116,7 +121,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="portfolio-grid-3-columns.html">
+                      <a href="publicacoes">
                         <span>Publicações</span>
                       </a>
                       <ul class="rd-navbar-dropdown">
@@ -159,7 +164,7 @@
                 </form>
               </div>
               <div class="rd-navbar-btn-wrap">
-                <a class="btn btn-primary btn-anis-effect" href="https://www.chapeco.sc.gov.br/">
+                <a class="btn btn-primary btn-anis-effect" style="color: #ffffff; background-color: #C4442D; border-color: #EE3252;" href="https://www.chapeco.sc.gov.br/">
                   <span class="btn-text">Plano Municipal</span>
                 </a>
               </div>
@@ -180,13 +185,13 @@
                       </h1>
                     </div>
                     <div class="col-xl-10 offset-top-30">
-                      <h4 class="d-none d-md-block text-light" data-caption-animate="fadeIn" data-caption-delay="900"> The smartest and most flexible bootstrap template by TemplateMonster you've ever seen. Create exactly what you need with our powerful bootstrap toolkit. </h4>
+                      <h4 class="d-none d-md-block text-light" data-caption-animate="fadeIn" data-caption-delay="900"> Protótipo de website para auxiliar vítimas de violência doméstica e familiar no município de Chapecó (SC). </h4>
                       <div class="group group-xl offset-top-20 offset-sm-top-50">
-                        <a class="btn btn-primary btn-lg btn-anis-effect" href="" data-caption-animate="fadeIn" data-caption-delay="1200">
-                          <span class="btn-text">Try builder now</span>
+                        <a class="btn btn-primary btn-lg btn-anis-effect" href="" data-caption-animate="fadeIn" data-caption-delay="1200" style="color: #ffffff; background-color: #C4442D; border-color: #EE3252;">
+                          <span class="btn-text">Saiba mais</span>
                         </a>
-                        <a class="btn btn-default btn-lg btn-anis-effect" href="" data-caption-animate="fadeIn" data-caption-delay="1200">
-                          <span class="btn-text">Buy intense now</span>
+                        <a class="btn btn-default btn-lg btn-anis-effect" href="publicacoes" data-caption-animate="fadeIn" data-caption-delay="1200">
+                          <span class="btn-text">Publicações</span>
                         </a>
                       </div>
                     </div>
